fix dialog z-index

--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -70,7 +70,7 @@
   position: fixed;
   left: 15px;
   bottom: 75px;
-  z-index: 999;
+  z-index: 9999;
 }
 /* Collapsible */
 .kwgh-wrap .collapsible:nth-of-type(1) {
